# AKCloud

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build.yml
src/: config.rs  db.rs  graveyard.rs  main.rs  server.rs  tagger.rs  web.rs
src/sync/: discovery.rs  identity.rs  mod.rs
src/web/: index.html
